draw_llvm.c:788:7: error: implicit declaration of function ‘LLVMContextSetOpaquePointers’
llvm-17
../src/gallium/auxiliary/draw/draw_llvm.c: In function ‘draw_llvm_create’:
../src/gallium/auxiliary/draw/draw_llvm.c:788:7: error: implicit declaration of function ‘LLVMContextSetOpaquePointers’ [-Werror=implicit-function-declaration]
788 | LLVMContextSetOpaquePointers(llvm->context, false);
| ^~~~~~~~~~~~~~~~~~~~~~~~~~~~